--- a/src/app/changepassword/changepassword.component.html
+++ b/src/app/changepassword/changepassword.component.html
@@ -3,7 +3,7 @@
     <h6>Sports</h6>
              </div>		
     </div>
-
+    
     <div class="main_container" id="sticky">
         <div class="right_col" role="main">
 <div class="row">
@@ -14,7 +14,7 @@
                      
                     
               </div>
-              <div style="background-image: url('/assets/images/cp.jpg');"></div>
+              <div style="background-image: url('loginback.jpg');"></div>
                 <div class="col-md-12">
                     
                 
