--- a/src/app/websitesetting/websitesetting.component.html
+++ b/src/app/websitesetting/websitesetting.component.html
@@ -19,11 +19,12 @@
                                     </div>
               <div class="col-md-12 col-sm-12 col-xs-12">
                   <div id="divLoading"> </div><!--Loading class -->
-                    <form action="http://newlotusbook.com/adminsetting/do_upload" enctype="multipart/form-data" method="post" accept-charset="utf-8"><input type="hidden" name="compute" value="1f09951c3d293d403128fe920869a43b">
+                    <form action="adminsetting/do_upload" enctype="multipart/form-data" method="post" accept-charset="utf-8"><input type="hidden" name="compute" value="1f09951c3d293d403128fe920869a43b">
     <input type="hidden" name="compute" value="1f09951c3d293d403128fe920869a43b" style="display:none;">
                         <div id="MsgDomain"></div>
                         <div class="popup_form">
-                            <div class="title_popup"><span id="tital_change"> </span> <button type="button" class="close" data-dismiss="modal">
+                            <div class="title_popup"><span id="tital_change">
+                                 </span> <button type="button" class="close" data-dismiss="modal">
                                     <div class="close_new"><i class="fa fa-times-circle"></i> </div>
                                 </button></div>
                             <div class="content_popup">
@@ -74,8 +75,8 @@
                                 <td>1.</td>	
                                 <td class=" ">newlotusbook.com </td>
                                 <td class=" ">newlotusbook </td>
-                                <td class=" "><img src="http://newlotusbook.com/assets/uploads/newlotusbookcom.png" width="50px"> </td>
-                                <td class=" "><img src="http://newlotusbook.com/assets/uploads/bgimagenewlotusbookcom.jpg" width="50px"> </td>
+                                <td class=" "><img src="newlotusbookcom.png" width="50px"> </td>
+                                <td class=" "><img src="bgimagenewlotusbookcom.jpg" width="50px"> </td>
                                 <td>
                                                                     <label class="switch">
                                         <input type="checkbox" onchange="saveWebsiteSetting(this, '1');" class="ng-pristine ng-valid ng-touched" checked="">
